# gst-whisper

./: Cargo.toml  README.md  build.rs  shell.nix
src/: filter.rs  lib.rs
src/filter/: imp.rs
